--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "engines": {
+  "node": "22.x"
+},
   "dependencies": {
     "framer-motion": "^12.7.3",
     "lucide-react": "^0.488.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "rollup": "^4.40.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -29,6 +33,6 @@
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.3",
-    "vite": "^5.2.0"
+    "vite": "^6.3.1"
   }
 }
